--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,8 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~47.0.6",
+    "expo-auth-session": "~3.7.2",
+    "expo-random": "~13.0.0",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
