--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,12 +18,14 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~47.0.6",
     "expo-auth-session": "~3.7.2",
+    "expo-location": "~15.0.1",
     "expo-random": "~13.0.0",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-uuid": "^2.0.1",
