--- a/mobile/package.json
+++ b/mobile/package.json
@@ -26,10 +26,11 @@
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "18.1.0",
+    "react-moment": "^1.1.2",
     "react-native": "0.70.5",
     "react-native-date-picker": "^4.2.6",
-    "react-native-phone-number-input": "^2.1.0",
     "react-native-maps": "1.3.2",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-uuid": "^2.0.1",
